feat: Introduce a new About page with personal bio, achievements, and supporting assets, and update navigation.

--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -12,9 +12,6 @@
   <div class="header">
     <h1 class="tamilletter"><a href="../index.html">ஆ</a></h1>
     <ul class="navlist">
-      <a href="#jrney">
-        <li>About</li>
-      </a>
       <a href="#contact">
         <li>Contact</li>
       </a>
@@ -22,26 +19,26 @@
   </div>
   <section class="about-hero">
     <div class="bio-col">
-      <h1>My Story</h1>
-      <p>I am from Ulundurpet, Tamil Nadu, and I come from a simple background. I completed my 10th and 12th standards
-        at a Government School and finished my 12th in 2024. After my father passed away in 2019, I had family and
-        financial responsibilities, so I could not continue college and chose to support my family. Even during that
-        time, I did not stop learning. I joined Freshworks STS Software Academy and started learning coding from the
-        basics. There, I gained hands-on experience in full-stack web development and built real projects. Today, my
-        goal is to grow as a developer, contribute to meaningful work, and become a responsible and reliable team
-        member.</p>
+      <h1>About Me</h1>
+      <p>I am from Ulundurpet, Tamil Nadu, and I come from a simple background. I completed my 12th standard at a
+        Government School and finished my 12th in 2024. After my father passed away in 2019, I had family and financial
+        responsibilities, so I could not continue college and chose to support my family. Even during that time, I did
+        not stop learning. I joined Freshworks STS Software Academy and started learning coding from the basics. There,
+        I gained hands-on experience in full-stack web development and built real projects. Today, my goal is to grow as
+        a developer, contribute to meaningful work, and become a responsible and reliable team member.</p>
     </div>
     <div class="collage-col">
-      <div class="p-card pc1"><img src="../asset/IMG_20250716_182517.jpg"></div>
+      <div class="p-card pc1"><img src="../asset/Screenshot 2026-02-25 093634.png"></div>
       <div class="p-card pc2"><img src="../asset/squad_photo.jpg"></div>
       <div class="p-card pc3"><img src="../asset/class_group_photo (1).jpg"></div>
     </div>
   </section>
+
   <section class="milestone-timeline" id="jrney">
     <div class="timeline-intro">
 
-      <h1>Achievements & Recognition</h1>
-      <p>A professional record of my milestones and competitive wins.</p>
+      <h1>Achievements & Certifications</h1>
+      <p>My key achievements, certifications, and learning milestones.</p>
     </div>
 
     <div class="timeline-wrapper">
@@ -51,8 +48,8 @@
           <div class="m-text">
 
             <h3>Essay Writing Competition</h3>
-            <p>Received a Certificate of Appreciation in an essay writing competition conducted by a Tamil Sangam. This
-              recognition helped improve my writing ability, creativity, and confidence in expressing ideas clearly.</p>
+            <p>Received a Certificate of Appreciation in a Tamil Sangam essay writing competition, improving my writing
+              skills, creativity, and confidence in expressing ideas.</p>
           </div>
           <div class="m-image">
             <img src="../asset/katturai.jpg" alt="Essay writing">
@@ -60,19 +57,15 @@
         </div>
       </div>
 
-      <!-- Achievement 2 -->
       <div class="milestone-item m-reverse">
         <div class="m-content">
           <div class="m-text">
-
-            <h3>Cybersecurity Webinar</h3>
-            <p>Successfully participated in a Cybersecurity Webinar conducted by Center for Innovation and Software
-              Learning on February 8, 2026. Gained knowledge about cybersecurity fundamentals, online safety practices,
-              and the importance of protecting digital systems and user data. This session improved my awareness of
-              secure development practices and modern cyber threats.</p>
+            <h3>Life Skills Product Building & Squad Presentation — 2nd Place</h3>
+            <p>Achieved second place in Life Skills Product Building and Squad Presentation, strengthening my teamwork,
+              communication, and presentation skills.</p>
           </div>
           <div class="m-image">
-            <img src="../asset/Amstrong-Cybersecurity-Webinar-Certificate (1).png" alt="Cybersecurity Webinar">
+            <img src="../asset/squad_photo.jpg" alt="Life Skills Presentation">
           </div>
         </div>
       </div>
@@ -81,14 +74,25 @@
       <div class="milestone-item">
         <div class="m-content">
           <div class="m-text">
-
-            <h3>Life Skills Product Building & Squad Presentation — 2nd Place</h3>
-            <p>Achieved second place in Life Skills Product Building and Squad Presentation activities. Worked with my
-              team on product ideas, sales, marketing, and presentations, improving my teamwork, communication, and
-              presentation skills</p>
+            <h3>EF SET Certification</h3>
+            <p>Completed the EF SET certification, demonstrating professional English communication skills.</p>
           </div>
           <div class="m-image">
-            <img src="../asset/squad_photo.jpg" alt="Squad Presentation">
+            <img src="../asset/ef_test.png" alt="EF SET Certificate">
+          </div>
+        </div>
+      </div>
+
+      <!-- Achievement 4 -->
+      <div class="milestone-item m-reverse">
+        <div class="m-content">
+          <div class="m-text">
+            <h3>Cybersecurity Webinar</h3>
+            <p>Participated in a cybersecurity webinar, gaining knowledge in cybersecurity basics, online safety, and
+              secure development practices.</p>
+          </div>
+          <div class="m-image">
+            <img src="../asset/Amstrong-Cybersecurity-Webinar-Certificate (1).png" alt="Cybersecurity Certificate">
           </div>
         </div>
       </div>
@@ -125,7 +129,7 @@
           <a href="https://www.linkedin.com/in/amstrong-b-75b1b7380/"><img src="../asset/linkedin.png" alt="" /></a>
         </div>
         <div>
-          <a href="https://www.instagram.com/lost.amz._/"><img src="../asset/instagram.png" alt="" /></a>
+          <a href="https://github.com/AmstrongBaskaran"><img src="../asset/github.png" alt="" /></a>
         </div>
         <div>
           <a href="https://mail.google.com/mail/?view=cm&to=aamstrong522@gmail.com"><img src="../asset/gmail.png"
