target blank added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amstrong Portfolio</title>
+  <title>Amstrong|Portfolio</title>
   <link rel="stylesheet" href="css_pages/index.css" />
 </head>
 
@@ -33,7 +33,7 @@
       </p>
       <div class="btns">
         <a href="#works"><button class="btn1">See My Work ⬇</button></a>
-        <a href="./html_pages/about.html"><button class="btn2">More Info ➚</button></a>
+        <a href="./html_pages/about.html"><button class="btn2">More About me ➚</button></a>
       </div>
     </div>
     <div class="heroimg">
@@ -150,29 +150,29 @@
     <div class="contact">
       <div>
         <h3>Email</h3>
-        <a href="">
+        <a href="https://mail.google.com/mail/?view=cm&to=aamstrong522@gmail.com" target="_blank">
           <p>aamstrong522@gmail.com</p>
         </a>
       </div>
       <div>
         <h3>Contact</h3>
-        <a href="">
+        <a href="https://wa.me/918148060827?text=Hi%20Amstrong%2C%20I%20visited%20your%20portfolio" target="_blank">
           <p>91+ 8148060827</p>
         </a>
       </div>
       <div class="media">
         <div>
-          <a href="https://www.linkedin.com/in/amstrong-b-75b1b7380/"><img src="./asset/linkedin.png" alt="" /></a>
+          <a href="https://www.linkedin.com/in/amstrong-b-75b1b7380/" target="_blank"><img src="./asset/linkedin.png" alt="" /></a>
         </div>
         <div>
-          <a href="https://github.com/AmstrongBaskaran"><img src="./asset/github.png" alt="" /></a>
+          <a href="https://github.com/AmstrongBaskaran" target="_blank"><img src="./asset/github.png" alt="" /></a>
         </div>
         <div>
-          <a href="https://mail.google.com/mail/?view=cm&to=aamstrong522@gmail.com"><img src="./asset/gmail.png"
+          <a href="https://mail.google.com/mail/?view=cm&to=aamstrong522@gmail.com" target="_blank"><img src="./asset/gmail.png"
               alt="" /></a>
         </div>
         <div>
-          <a href="https://wa.me/918148060827?text=Hi%20Amstrong%2C%20I%20visited%20your%20portfolio"><img
+          <a href="https://wa.me/918148060827?text=Hi%20Amstrong%2C%20I%20visited%20your%20portfolio" target="_blank"><img
               src="./asset/whatsapp.png" alt="" /></a>
         </div>
       </div>
