--- a/html_pages/about.html
+++ b/html_pages/about.html
@@ -19,7 +19,7 @@
   </div>
   <section class="about-hero">
     <div class="bio-col">
-      <h1>About Me</h1>
+      <h1>My Journey</h1>
       <p>I am from Ulundurpet, Tamil Nadu, and I come from a simple background. I completed my 12th standard at a
         Government School and finished my 12th in 2024. After my father passed away in 2019, I had family and financial
         responsibilities, so I could not continue college and chose to support my family. Even during that time, I did
